--- a/manuscript/04-discussion.tex
+++ b/manuscript/04-discussion.tex
@@ -1,4 +1,51 @@
 
-
 \section*{Discussion}
 
+In this study, 
+we used data from a 3-decades-long survey of arctic charr in Lake M\'{y}vatn
+to quantify the population's demography and potential recovery 
+following its collapse due to heavy exploitation 
+\citep{gudbergsson2004}.
+The survival probability of all age classes fluctuated substantially among years,
+with only adults showing a systematic positive trend over the course of the study period.
+In constrast, per capita recruitment clearly declined and experienced comparatively little
+variation superimposed on this decline.
+The countervailing trends in adult survival and per capita recruitment resulted 
+in no directional change in the total population size or population growth rate,
+despite rising number of adults.
+Rather, the dynamics of  M\'{y}vatn charr are dominated by large interannual variability
+and a shift towards relatively older age distribution.
+Harvest-induced shifts in age structure are well known in fisheries biology,
+as is their capicity to limit recovery following overexploitation 
+\citep{hsieh2010fishing}.
+
+A crucial step for projecting the future dynamics of M\'{y}vatn’s charr population 
+is identifying the underlying causes for changes in per capita recruitment, 
+which is a major goal of fisheries biology more generally 
+\citep{houde2008emerging, ludsin2014physical, hansen2013rapid}.
+Food web interactions have been identified as an important source 
+of fluctuations in other charr populations 
+\citep{snorrason1992population, amundsen1994piscivory, jonsson2015freshwater}.
+M\'{y}vatn is characterized by dramatic fluctuations in the abundance 
+of primary food sources for juvenile charr, particularly benthic crustaceans 
+and midges 
+\citep{einarsson2004clad, gardarsson2004population, gudbergsson2004}.
+Furthermore, there is substantial spatial heterogeneity in the abundance 
+of these aquatic invertebrates \citep{bartrons2015spatial} 
+which might disproportionately inhibit young juveniles 
+that have more restricted mobility than the larger age classes. 
+The large fluctuations in aquatic invertebrates are associated various consumer species 
+in addition to charr, including sticklebacks and brown trout that could serve 
+as competitors for young charr, and piscivorous waterfowl that could serve as predators 
+\citep{einarsson2004myvatn}. 
+In addition to biotic factors, 
+temperature has received much attention as a driver of charr populations 
+\citep{winfield2008arctic, elliott2010temperature, jonsson2015freshwater}
+(Winfield et al. 2008, Elliott and Elliott 2010, Jonsson and Setzer 2015), 
+given their distribution restricted to arctic
+and cold-temperature lakes \citep{klemetsen2003atlantic}
+and the ubiquity anthropogenic climate change. 
+While climate warming has not yet become an obvious ecological driver at M\'{y}vatn, 
+it is nonetheless possible that temperature changes have adversely affected recruitment 
+in M\'{y}vatn’s charr population as has been seen in other Icelandic lakes 
+\citep{malmquist2009salmonid}. 
