--- a/manuscript/00-abstract.tex
+++ b/manuscript/00-abstract.tex
@@ -1,5 +1,18 @@
 
 \section*{Abstract} \label{abstract}
 
-
+Quantifying temporal variation in demographic rates is a central goal of population ecology,
+in both basic and applied settings.
+In this study, we analysed a multidecadal age-structured time series 
+of arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
+to infer the time-varying demographic response of the population 
+to reduced harvest in the wake of the fishery's collapse.
+Our analysis shows that while survival probability of adults increased following the alleviation
+of harvesting pressure, per recruitment consistent declined over the entire study period.
+The countervailing demographic trends resulted 
+in no directional change in the total population size or population growth rate.
+Rather, the population dynamics were dominated by large interannual variability
+and a shift towards a relatively older age distribution.
+These results are indicative of a slow recovery of the population following its collapse,
+despite the rising number of adults due to relaxed harvest.
 
