--- a/manuscript/03-results.tex
+++ b/manuscript/03-results.tex
@@ -6,8 +6,8 @@ The full model provided a good visual fit to the station-level
 catch data (Figure \ref{fig:p_catch}),
 with most of the temporal variation in lake-wide catch being captured by the model.
 The 90\% prediction intervals provided reasonable coverage relative to the observed data,
-although the latter were slightly zero-inflated in some years.
-While in principle it would be possible to account for such zero inflation,
+although the observations were zero-inflated in some years.
+While in principle it would be possible to account for such zero inflation in the model,
 it is unlikely that this would substantively alter the model inference.
 In contrast to the full model,
 the reduced model provided a poor fit to the data (Figure \ref{fig:p_catch_reduced}),
@@ -43,7 +43,10 @@ especially for age 1 and age 3 survival.
 The survival probabilities for all age classes increased through time,
 although only the trend for age 4+ was statistically unambiguous 
 (Figure \ref{fig:p_surv}; Table \ref{tab:gls}).
+Elevated age 4+ survival was associated with a steady increase in the catch of
+age 4+ individuals from 2005 onward (Figure \ref{fig:p_catch}). 
 In contrast, per capita recruitment declined through time, 
+consistent with declining age 1 catch,
 and this trend was stronger than for survival of any age class
 (Figure \ref{fig:p_rec}; Table \ref{tab:gls}).
 Therefore, the positive effect of increased survival 
