--- a/manuscript/04-discussion.tex
+++ b/manuscript/04-discussion.tex
@@ -2,27 +2,29 @@
 \section*{Discussion}
 
 In this study, 
-we used data from a 3-decades-long survey of arctic charr in Lake M\'{y}vatn
+we used data from a multidecadal survey of arctic charr in Lake M\'{y}vatn
 to quantify the population's demography and potential recovery 
 following its collapse due to heavy exploitation 
 \citep{gudbergsson2004}.
 The survival probability of all age classes fluctuated substantially among years,
-with only adults showing a systematic positive trend over the course of the study period.
-In constrast, per capita recruitment clearly declined and experienced comparatively little
-variation superimposed on this decline.
-The countervailing trends in adult survival and per capita recruitment resulted 
+with only adults showing an unambiguous positive trend over the course of the study period.
+In contrast, per capita recruitment clearly declined and experienced comparatively little
+variation around this trend.
+The countervailing changes in  per capita recruitment and adult survival resulted 
 in no directional change in the total population size or population growth rate,
-despite rising number of adults.
-Rather, the dynamics of  M\'{y}vatn charr are dominated by large interannual variability
-and a shift towards relatively older age distribution.
-Harvest-induced shifts in age structure are well known in fisheries biology,
-as is their capicity to limit recovery following overexploitation 
-\citep{hsieh2010fishing}.
+despite the rising number of adults.
+Rather, the dynamics of  M\'{y}vatn's charr population 
+were dominated by large interannual variability
+and a shift towards a relatively older age distribution.
+In and of itself, the increase in adult survival 
+is a positive signal for the population's recovery,
+and it has been taken as such by the local stakeholders 
+who have called for relaxing harvest restrictions in recent years.
+However, persistently low recruitment provides a cautionary note 
+that should be taken into consideration in formulating a management strategy.
 
 A crucial step for projecting the future dynamics of M\'{y}vatn’s charr population 
-is identifying the underlying causes for changes in per capita recruitment, 
-which is a major goal of fisheries biology more generally 
-\citep{houde2008emerging, ludsin2014physical, hansen2013rapid}.
+is identifying the underlying causes for the decline in per capita recruitment.
 Food web interactions have been identified as an important source 
 of fluctuations in other charr populations 
 \citep{snorrason1992population, amundsen1994piscivory, jonsson2015freshwater}.
@@ -40,8 +42,7 @@ as competitors for young charr, and piscivorous waterfowl that could serve as pr
 \citep{einarsson2004myvatn}. 
 In addition to biotic factors, 
 temperature has received much attention as a driver of charr populations 
-\citep{winfield2008arctic, elliott2010temperature, jonsson2015freshwater}
-(Winfield et al. 2008, Elliott and Elliott 2010, Jonsson and Setzer 2015), 
+\citep{winfield2008arctic, elliott2010temperature, jonsson2015freshwater},
 given their distribution restricted to arctic
 and cold-temperature lakes \citep{klemetsen2003atlantic}
 and the ubiquity anthropogenic climate change. 
@@ -49,3 +50,31 @@ While climate warming has not yet become an obvious ecological driver at M\'{y}v
 it is nonetheless possible that temperature changes have adversely affected recruitment 
 in M\'{y}vatn’s charr population as has been seen in other Icelandic lakes 
 \citep{malmquist2009salmonid}. 
+
+This study provides a demographic assessment of a population of arctic charr in a single lake,
+but it reinforces themes that have broad and increasing interest in applied ecology.
+Harvest-induced shifts in age structure have been documented in other fisheries,
+typically resulting in ``truncation'' of the oldest age classes 
+that are typically the targets of harvest efforts
+\citep{hsieh2010fishing}.
+Suppression of adult abundance is expected to have deleterious effects on populations,
+with the corollary that relaxation of harvest should allow populations 
+to recover following overexploitation.
+However, this will only be true if juvenile recruitment is sufficient 
+to sustaining the population's recovery.
+Recruitment in fish populations 
+has long been recognized as highly variable and difficult to predict
+owing to the interplay of numerous biotic and abiotic factors 
+\citep{dixon1999episodic, houde2008emerging, ludsin2014physical}.
+This poses a particular challenge for management efforts, 
+as complex suites of ecological factors are both difficult to understand 
+and difficult to regulate, 
+particularly in comparison to a direct anthropogenic driver such as harvest
+\citep{beamish1999taking, link2002does}.
+The extent to which this is true for M\'{y}vatn's arctic charr is currently unknown.
+Nonetheless, 
+the countervailing trends in survival and recruitment 
+in the wake of alleviated of harvesting pressure
+underscore the potential for heterogeneous demographic responses to management efforts
+due to the complex ecological context in which such efforts take place.
+
