--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -22,6 +22,14 @@
   publisher={Wiley Online Library}
 }
 
+@incollection{beamish1999taking,
+  title={Taking the next step in fisheries management},
+  author={Beamish, Richard J and Mahnken, Conrad},
+  booktitle={Ecosystem Approaches for Fisheries Management.},
+  publisher={University of Alaska Sea Grant, AK-SG-99-01, Fairbanks},
+  pages={1--21},
+  year={1999}
+}
 
 @article{carpenter2017stan,
 author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee,
@@ -40,6 +48,17 @@ publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridg
   author={Caswell, Hal},
   journal={Inc., Sunderland, MA},
   year={2001}
+}
+
+@article{dixon1999episodic,
+  title={Episodic fluctuations in larval supply},
+  author={Dixon, Paul A and Milicich, Maria J and Sugihara, George},
+  journal={Science},
+  volume={283},
+  number={5407},
+  pages={1528--1530},
+  year={1999},
+  publisher={American Association for the Advancement of Science}
 }
 
 @article{einarsson2004clad,
@@ -81,6 +100,18 @@ publisher={Springer}
   publisher={Wiley Online Library}
 }
 
+@article{forcada2008life,
+  title={Life history buffering in Antarctic mammals and 
+          birds against changing patterns of climate and environmental variation},
+  author={Forcada, Jaume and Trathan, Philip N and Murphy, Eugene J},
+  journal={Global Change Biology},
+  volume={14},
+  number={11},
+  pages={2473--2488},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
 @article{gardarsson2004population,
 title={Population fluctuations of chironomid and simuliid {D}iptera at {M}\'{y}vatn in 1977--1996},
 author={Gardarsson, Arnthor and Einarsson, \'{A}rni and 
@@ -92,6 +123,18 @@ number={2},
 pages={209--217},
 year={2004},
 publisher={Springer}
+}
+
+@article{gross2005estimating,
+  title={Estimating fluctuating vital rates from time-series data: 
+          a case study of aphid biocontrol},
+  author={Gross, Kevin and Ives, Anthony R and Nordheim, Erik V},
+  journal={Ecology},
+  volume={86},
+  number={3},
+  pages={740--752},
+  year={2005},
+  publisher={Wiley Online Library}
 }
 
 @article{gudbergsson2004,
@@ -140,6 +183,19 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
   publisher={Northwest Atlantic Fisheries Org}
 }
 
+@article{hunter2010climate,
+  title={Climate change threatens polar bear populations: 
+            a stochastic demographic analysis},
+  author={Hunter, Christine M and Caswell, Hal and Runge, Michael C 
+            and Regehr, Eric V and Amstrup, Steve C and Stirling, Ian},
+  journal={Ecology},
+  volume={91},
+  number={10},
+  pages={2883--2897},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
 @article{hsieh2010fishing,
   title={Fishing effects on age and spatial structures undermine population stability of fishes},
   author={Hsieh, Chih-hao and Yamauchi, Atsushi and Nakazawa, Takefumi 
@@ -151,6 +207,21 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
   year={2010},
   publisher={Springer}
 }
+
+@article{jeppesen2001fish,
+  title={Fish and crustaceans in northeast Greenland lakes 
+          with special emphasis on interactions between Arctic charr (Salvelinus alpinus), Lepidurus arcticus and benthic chydorids},
+  author={Jeppesen, Erik and Christoffersen, Kirsten and Landkildehus, Frank 
+          and Lauridsen, Torben and Amsinck, Susanne L and Riget, Frank 
+            and S{\o}ndergaard, Martin},
+  journal={Hydrobiologia},
+  volume={442},
+  number={1},
+  pages={329--337},
+  year={2001},
+  publisher={Springer}
+}
+
 
 @article{jonsson2015freshwater,
   title={A freshwater predator hit twice by the effects of warming across trophic levels},
@@ -177,6 +248,30 @@ pages={1--59},
 year={2003},
 publisher={Wiley Online Library}
 }
+
+@article{koons2016life,
+  title={A life-history perspective on the demographic drivers of 
+          structured population dynamics in changing environments},
+  author={Koons, David N and Iles, David T and Schaub, Michael and Caswell, Hal},
+  journal={Ecology letters},
+  volume={19},
+  number={9},
+  pages={1023--1031},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+
+@article{link2002does,
+  title={What does ecosystem-based fisheries management mean?},
+  author={Link, Jason S},
+  journal={Fisheries},
+  volume={27},
+  number={4},
+  pages={18--21},
+  year={2002}
+}
+
 
 @article{ludsin2014physical,
   title={Physical--biological coupling and the challenge of 
@@ -251,6 +346,29 @@ url = {https://CRAN.R-project.org/package=nlme},
     year = {2020},
     url = {http://mc-stan.org/},
   }
+  
+@article{twombly1994comparative,
+  title={Comparative demography and population dynamics of 
+          two coexisting copepods in a Venezuelan floodplain lake},
+  author={Twombly, Saran},
+  journal={Limnology and Oceanography},
+  volume={39},
+  number={2},
+  pages={234--247},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+  
+@article{white2007irruptive,
+  title={Irruptive population dynamics in Yellowstone pronghorn},
+  author={White, PJ and Bruggeman, Jason E and Garrott, Robert A},
+  journal={Ecological Applications},
+  volume={17},
+  number={6},
+  pages={1598--1606},
+  year={2007},
+  publisher={Wiley Online Library}
+}
   
 @article{winfield2008arctic,
   title={The Arctic charr (Salvelinus alpinus) populations of Windermere, UK: 
