--- a/manuscript/02-methods.tex
+++ b/manuscript/02-methods.tex
@@ -15,13 +15,12 @@ M\'{y}vatn is shallow (south basin mean depth = 2.3m) and
 fed by nurient rich springs that sustain high benthic primary and secondary production.
 The latter comprises large but temporally variable populations of benthic invertebrates 
 such as midges and cladocerans \citep{einarsson2004clad, gardarsson2004population}.
-The benthic invertebrates are an important food source for M\'{y}vatn’s vertebrate populations, 
-including Arctic charr, three-spined sticklebacks (Gasterosteus aculeatus), 
-brown trout (Salmo trutta), and waterfowl \citep{einarsson2004myvatn}. 
+The benthic invertebrates are in turn 
+an important food source for M\'{y}vatn’s vertebrate populations, 
+including Arctic charr, threespine stickleback (\emph{Gasterosteus aculeatus}), 
+brown trout (\emph{Salmo trutta}), and waterfowl \citep{einarsson2004myvatn}. 
 
-Arctic charr (Salvelinus alpinus) are salmonids with a circumpolar distribution 
-and are important consumers in many boreal and arctic lakes \citep{klemetsen2003atlantic}. 
-While some charr populations are anadromous, 
+While some arctic charr populations are anadromous, 
 M\'{y}vatn’s population to resides strictly within the lake, 
 despite a major outflow that connects the lake to the Greenland Sea \citep{gudbergsson2004}. 
 Spawning occurs in the fall among individuals aged 4 years and older. 
@@ -47,7 +46,7 @@ using a consistent methodology.
 The surveys largely took place after the period of most dramatic population decline 
 \citep{gudbergsson2004} 
 and were intended to monitor the recovery of the population following its collapse. 
-Twelve survey stations were sambled from around the lake,
+Twelve survey stations were sampled from around the lake,
 most of which were located in the south basin. 
 Captured individuals were aged either by otoliths directly or 
 with an estimate based on length.
@@ -57,7 +56,8 @@ For this analysis we used only the September data.
 Therefore, in our age classifications an individual of age ``x'' is an individual 
 that survived to that age (e.g., an ``age 1'' individual was born in the previous fall). 
 The oldest individuals in the data set were 12 years old, although observations 
-of individuals older than 6 years are sparse. 
+of individuals older than 6 years are sparse
+(Figure \ref{fig:p_cohort}). 
 In M\'{y}vatn, charr reach maturity between 4 and 5 years of age, 
 and therefore we grouped the older individuals into a single reproductive age class
 denoted ``age 4+''.
@@ -75,7 +75,7 @@ The model projected the dynamics from one time step to the next as
     \mathbf{x}_t = \mathbf{P}_{t-1}~\mathbf{x}_{t-1}
 \end{equation}
 %
-where $\mathbf{P}_{t}$ is a demographic projection matrix
+where $\mathbf{P}_{t}$ is a demographic projection matrix,
 and $\mathbf{x}_t$ is an age-structured vector of scaled population densities 
 (see description of scaling below) at time $t$.
 %
@@ -95,8 +95,8 @@ The projection matrix was defined as
 %
 where $\rho_{t}$ is per capita recruitment 
 and $\phi_{1,t}$ is the survival probability of age class $i$. 
-The model assumes that only age 4+ is reproductive age class 
-and that individuals that survive beyond age 4 return to the age 4+ class.
+The model assumes that only age 4+ is
+and that individuals surviving beyond age 4 return to the age 4+ class.
 
 Temporal variation in recruitment was modeled as a random walk on a log scale to ensure
 that the values remained positive:
@@ -157,11 +157,11 @@ scaled by the catch rate for the corresponding age class.
 We assumed that the lake-wide population was well mixed across years,
 and while we did not attempt to account for systematic differences between stations;
 no such differences were apparent from visual inspection of the data 
-(see discussion of potential overdispersion below).
+(Figure  \ref{fig:p_sites}; see discussion of potential overdispersion below).
 Estimating a separate catch rate for each age class allowed the model to account
 for systematic differences in catch rates as a function of age.
 Such differences are quite apparent in the data, 
-as far too few first year individuals were captured to account for the abundance subsequent
+as far too few first-year individuals were captured to account for the abundance subsequent
 ages, assuming a closed population. 
 We used exponential priors with rate 1/50 for the initial scaled population densities for
 each age class, 
