--- a/manuscript/charr_ms.tex
+++ b/manuscript/charr_ms.tex
@@ -40,7 +40,7 @@
 
 \author{
 Joseph S. Phillips$^{1,2, \dagger}$ \\
-Gu{\dh}ni Gu{\dh}ergsson$^{3}$ \\
+Gu{\dh}ni Gu{\dh}bergsson$^{3}$ \\
 Anthony R. Ives$^{2}$
 }
 
@@ -88,7 +88,7 @@ Running head: {Arctic charr demography}
 
 \bigskip
 
-\textit{Keywords}: {}
+\textit{Keywords}: {demography; Lake M\'{y}vatn; population dynamics; \emph{Salvelinus alpinus}}
 
 \clearpage
 
@@ -118,6 +118,20 @@ Running head: {Arctic charr demography}
 % ---------------------------------------------------------------------------------------
 % ---------------------------------------------------------------------------------------
 
+\section*{Acknowledgements} 
+
+The data used in this manuscript were collected during routine sampling 
+of M\'{y}vatn’s charr population supported the Icelandic Marine and Freshwater Research Institute 
+and the Mývatn Research Station directed by \'{A}rni Einarsson. 
+Further support came from NSF LTREB DEB-1556208 to ARI and 
+NSF Graduate Research Fellowship (DGE-1256259) supporting JSP.
+GG conducted the surveys of Mývatn’s Arctic charr population. 
+JSP conducted the analysis, 
+with input from ARI. 
+JSP wrote the first draft of the paper, 
+with substantial contributions from all authors to subsequent drafts.
+
+
 \bibliographystyle{ecology.bst}
 \clearpage
 
@@ -137,14 +151,14 @@ matching the nominal coverage of standard errors.
 \setlength{\tabcolsep}{12pt}
 \begin{tabular}{llc}
 \toprule
-Model parameter        &                      & Posterior median [\text{UI}_{68\%}] \\
+Model parameter        &                         & Posterior median [\text{UI}_{68\%}] \\
 \cmidrule{1-3}
-catch rate             & age 1                & 0.001 [0.0006, 0.002]               \\
-&                        age 2                & 0.08 [0.05, 0.13]                   \\
-&                        age 3                & 0.48 [0.32, 0.67]                   \\
-&                        age 4+               & 0.66 [0.48, 0.83]                   \\
-random walk SD         & survival probability & 2.03 [1.79, 2.30]                   \\
-&                        recruitment          & 1.45 [1.25, 1.70]                   \\
+catch rate             & age 1                   & 0.001 [0.0006, 0.002]               \\
+&                        age 2                   & 0.08 [0.05, 0.13]                   \\
+&                        age 3                   & 0.48 [0.32, 0.67]                   \\
+&                        age 4+                  & 0.66 [0.48, 0.83]                   \\
+random walk SD         & survival probability    & 2.03 [1.79, 2.30]                   \\
+&                        recruitment capita^{-1} & 1.45 [1.25, 1.70]                   \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -171,15 +185,15 @@ and statistical non-stationarity.
 \setlength{\tabcolsep}{12pt}
 \begin{tabular}{llccc}
 \toprule
-Response variable      &        & Intercept (\pm~\text{SE}) & Year slope (\pm~\text{SE}) & AR
-                                                                                coefficient \\
+Response variable       &        & Intercept (\pm~\text{SE}) & Year slope (\pm~\text{SE}) & AR
+                                                                                 coefficient \\
 \cmidrule{1-5}
-survival probability   & age 1  & ~0.01  \pm~0.23           & ~0.26 \pm~0.23        & ~0.26 \\
-&                        age 2  & ~0.00  \pm~0.15           & ~0.13 \pm~0.15        & -0.18 \\
-&                        age 3  & ~0.04  \pm~0.54           & ~0.25 \pm~0.44        & ~0.80 \\
-&                        age 4+ & -0.02 \pm~0.26            & ~0.55 \pm~0.25        & ~0.53 \\
-recruitment            &        & -0.06 \pm~0.29            & -0.71 \pm~0.27        & ~0.56 \\
-population growth rate &        & ~0.00  \pm~0.15           & ~0.08 \pm~0.15        & -0.21 \\
+survival probability    & age 1  & ~0.01  \pm~0.23           & ~0.26 \pm~0.23        & ~0.26 \\
+&                         age 2  & ~0.00  \pm~0.15           & ~0.13 \pm~0.15        & -0.18 \\
+&                         age 3  & ~0.04  \pm~0.54           & ~0.25 \pm~0.44        & ~0.80 \\
+&                         age 4+ & -0.02 \pm~0.26            & ~0.55 \pm~0.25        & ~0.53 \\
+recruitment capita^{-1} &        & -0.06 \pm~0.29            & -0.71 \pm~0.27        & ~0.56 \\
+population growth rate  &        & ~0.00  \pm~0.15           & ~0.08 \pm~0.15        & -0.21 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -212,7 +226,8 @@ The y-axis is log+1 transformed to accommodate zeros.
 \centering
 \includegraphics{../analysis/p_dens.pdf}
 \caption{\label{fig:p_dens}
-Lake-wide population density (solid line) inferred from the demographic model.
+Average population density across stations (solid line) 
+inferred from the demographic model.
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
 The y-axis is log transformed.
@@ -270,8 +285,8 @@ Log-recruitment $\text{capita}^{-1}$ (solid blue line) inferred from the demogra
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
 The solid black line represents the fitted values from the GLS models.
-Note that log-recruitment ranging from -1 to 8 
-corresponds to actual log-recruitment ranging from 0.4 to 3000.
+Note that log-recruitment $\text{capita}^{-1}$ ranging from -1 to 8 
+corresponds to actual log-recruitment $\text{capita}^{-1}$ ranging from 0.4 to 3000.
 }
 \end{figure}
 \clearpage
@@ -298,6 +313,28 @@ corresponds to actual log-recruitment ranging from 0.4 to 3000.
 % ---------------------------------------------------------------------------------------
 \begin{figure}
 \centering
+\includegraphics{../analysis/p_cohort.pdf}
+\caption{\label{fig:p_cohort}
+Survey catch as a function of age, with each line corresponding to a unique cohort.
+}
+\end{figure}
+\clearpage
+% ---------------------------------------------------------------------------------------
+
+% ---------------------------------------------------------------------------------------
+\begin{figure}
+\centering
+\includegraphics{../analysis/p_sites.pdf}
+\caption{\label{fig:p_sites}
+Station-level catch through time, with stations shown in different colors.
+}
+\end{figure}
+\clearpage
+% ---------------------------------------------------------------------------------------
+
+% ---------------------------------------------------------------------------------------
+\begin{figure}
+\centering
 \includegraphics{../analysis/p_catch_reduced.pdf}
 \caption{\label{fig:p_catch_reduced}
 Station-level catch (points) and 90\% posterior prediction intervals (shading) 
@@ -320,8 +357,8 @@ The y-axis is log+1 transformed to accommodate zeros.
 \centering
 \includegraphics{../analysis/p_dens_reduced.pdf}
 \caption{\label{fig:p_dens_reduced}
-Lake-wide population density (solid line) inferred from the 
-reduced version of the demographic model 
+Average population density across stations (solid line)
+inferred from the reduced version of the demographic model 
 with survival and recruitment fixed through time.
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
